--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -114,6 +114,12 @@ hr {
     margin-bottom: 50px;
 }
 
+.croissants {
+    transform: rotate(90deg);
+    margin-top: 100px;
+    margin-bottom: 150px;
+}
+
 footer {
     background: #fff;
     background: rgba(255,255,255,0.9);
